--- a/src/index.html
+++ b/src/index.html
@@ -56,12 +56,12 @@
                       <div class="row my-2 px-4">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" value="recordarme" id="modal-check">
-                          <label class="form-check-label modal-check-label" for="modal-check">
+                          <label class="form-check-label modal-check-label modal__sm-txt" for="modal-check">
                             Recordarme
                           </label>
                         </div>
                         <div class="modal-link-cont ml-auto">
-                          <a href="#" class="modal__link">¿Olvidaste tu contraseña?</a>
+                          <a href="#" class="modal__link modal__sm-txt">¿Olvidaste tu contraseña?</a>
                         </div>
                       </div>
                       <button type="submit" class="btn btn-primary my-3 px-5 modal-btn">Iniciar Sesion</button>
@@ -280,7 +280,7 @@
             <a href="./cursos.html" class="footer__link">
               <p>Cursos</p>
             </a>
-            <a href="./faq" class="footer__link">
+            <a href="./faq.html" class="footer__link">
               <p>Faq</p>
             </a>
             <a href="./contacto.html" class="footer__link">
@@ -329,7 +329,7 @@
     </script>
   <script src="../bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    document.querySelector(".modal-dialog").addEventListener("click", function (e) {
+    document.querySelector(". modal__sm-txt-dialog").addEventListener("click", function (e) {
       const clicked = e.target;
       if (clicked.classList.value.includes('modal-change')) {
         const type = clicked.dataset.mdtype;
