--- a/src/cursos.html
+++ b/src/cursos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="../bootstrap-4.3.1-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./bootstrap-4.3.1-dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 
@@ -489,7 +489,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
-  <script src="../bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript">
     document.querySelector(".modal-dialog").addEventListener("click", function (e) {
       const clicked = e.target;
