--- a/src/contacto.html
+++ b/src/contacto.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Let's | Contacto</title>
+  <link rel="icon" href="./img/logo-lets.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./bootstrap-4.3.1-dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./css/main.css" />
 </head>
