--- a/src/cursos.html
+++ b/src/cursos.html
@@ -91,7 +91,7 @@
     <section class="hero hero--pages">
       <div
         class="caption caption--pages text-center d-flex justify-content-center align-items-center flex-column text-light">
-        <h1 class="hero__title text-wrap my-3 text-uppercase">Contacto</h1>
+        <h1 class="hero__title text-wrap my-3 text-uppercase">Cursos</h1>
       </div>
     </section>
     <!-- !Cursos 1  -->
