--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
           <div class="col mx-4 my-2 client-card">
             <div class="row">
               <img src="./img/quote.svg" alt="" class="client__quote">
-              <p class="client__p text-justify">Cienco e strellas. Ir a clase es adictivo! He aprendido mucho
+              <p class="client__p text-justify">Cienco estrellas. Ir a clase es adictivo! He aprendido mucho
                 en 2 años
                 gracias a la
                 metodología, los materiales y los
@@ -202,7 +202,7 @@
             </div>
             <div class="row align-items-center my-3">
               <img src="./img/client-3.jpg" alt="" class="client-img">
-              <h5 class="client-name ml-3">ALEX TORRALBA</h5>
+              <h5 class="client-name ml-3">EIKE RODRIGUEZ</h5>
             </div>
           </div>
         </div>
